--- a/web/css/pets.css
+++ b/web/css/pets.css
@@ -1,4 +1,9 @@
-  
+
+.wrap{Text-align:center; width:90%; margin: 0 auto; border: 0px solid black; margin-top:25px;}
+.header{ text-align:left;padding:25px;}
+.headerImg {float:left; width:200px;}
+.headerText {float:left; height:105px; padding-top:50px; padding-left:25px;}
+
 table {
      border-collapse: collapse;
      width: 20%;
@@ -38,7 +43,7 @@ th {
 }
 body {
     background-color: #F08080;
-    text-align: center;
+    text-align: left;
 }
 
 html, body {
@@ -61,3 +66,49 @@ input {
 input[readonly] {
 background-color: gray;
 }
+
+
+.navcontainer { margin-left: 30px; text-align:left; }
+
+ /*Fat Erik's Pipelist*/
+ /*http://css.maxdesign.com.au/listamatic/horizontal32.htm */
+ .navlist
+ {
+ list-style: none;
+ padding: 0;
+ margin: 0;
+ }
+
+ .navlist li
+ {
+ display: inline;
+ padding: 0;
+ margin: 0;
+ }
+
+ .navlist li:before { content: "| "; }
+ .navlist li:first-child:before { content: ""; }
+
+ /*IE workaround*/
+ /*All IE browsers*/
+ * html #navlist li
+ {
+ border-left: 1px solid black;
+ padding: 0 0.4em 0 0.4em;
+ margin: 0 0.4em 0 -0.4em;
+ }
+
+ /*Win IE browsers - hide from Mac IE\*/
+ * html .navlist { height: 1%; }
+
+ * html .navlist li
+ {
+ display: block;
+ float: left;
+ }
+
+ /*End hide*/
+ /*Mac IE 5*/
+ * html .navlist li:first-child { border-left: 0; }
+
+
